<resources>
    <string name="app_name">EventTrackingApp</string>
    <string name="action_settings">Settings</string>
    <string name="view_images">View Images</string>
    <string name="calculate_direction">Calculate Direction</string>
    <string name="add_edit_image">Add Image</string>
    <string name="delete_own_track">Reset Track</string>
    <string name="delete_image">Delete Image</string>
    <string name="message_write_hint">Write a message</string>
    <string name="event_name">Event Name</string>
    <string name="description">Description</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="create_event">Create Event</string>
    <string name="my_info">My Info</string>
    <string name="cancel">Cancel</string>
    <string name="list_events">List Events</string>
    <string name="participate">Participate</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="map">Map</string>
    <string name="leave_event">Leave Event</string>
    <string name="close_event">Close Event</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_google">Login with Google</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">confirm password</string>
    <string name="name">Name</string>
    <string name="owner">Owner</string>
    <string name="save">Save</string>
    <string name="choose_file_name">Choose file name</string>
    <string name="choose_file">Choose File</string>
    <string name="default_text_msg">How are you doing? This is a long message that should probably wrap.</string>
    <string name="btn_DeleteEvent">Delete Event</string>
    <string name="filter_btn">Filter</string>
    <string name="clear_btn">Clear</string>
    <string name="myEvents_btn">My Events</string>


    <string name="fire_store_users">Users</string>
    <string name="fire_store_users_locations">User Locations"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
