<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation= "vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="80dp">

    <Button
        android:id="@+id/btn_createEvent"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary2"
        android:text="@string/create_event"
        android:textColor="@android:color/white" />
    <Button
        android:id ="@+id/btn_listEvents"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/list_events"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary2"/>
    <Button
        android:id ="@+id/btn_participateEvent"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:text="@string/participate"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary2"/>

    <TextView
        android:id="@+id/link_logOut"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark2"
        android:layout_alignParentBottom="true"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>