<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="30dp"
    android:paddingTop="80dp"
    android:paddingRight="30dp"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id ="@+id/body"
        android:paddingLeft="30dp"
        android:paddingTop="80dp"
        android:paddingRight="30dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id ="@+id/layoutemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textColor="@color/colorPrimary"
            android:id ="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id ="@+id/layoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutemail"
        app:passwordToggleEnabled="true">
        <EditText
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/colorPrimary"
            android:id ="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@id/layoutpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/layoutpassword"
        android:layout_marginTop="128dp"
        android:backgroundTint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_google_seeklogo_com"
        android:gravity="center|center_vertical"
        android:text="@string/login_google"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/link_regist"
        android:layout_width="349dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loading"
        android:paddingLeft="30dp"
        android:paddingTop="80dp"
        android:visibility="invisible"
        android:paddingRight="30dp">

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="334dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="137dp" />

    </RelativeLayout>

</RelativeLayout>