<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/maroon"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_weight="50"
            android:id="@+id/event_name"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_weight="50"
            android:id="@+id/street"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="50"
            android:gravity="center"
            android:id="@+id/city"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="50"
            android:gravity="center"
            android:id="@+id/country"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="50"
            android:text="@string/event_date"
            android:gravity="center"
            android:textColor="@color/maroon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="50"
            android:gravity="center"
            android:id="@+id/date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="50"
            android:textColor="@color/maroon"
            android:text="@string/owner"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="50"
            android:gravity="center"
            android:id="@+id/owner"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="50"
            android:text="@string/description"
            android:textColor="@color/maroon"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="50"
            android:gravity="center"
            android:id="@+id/description"/>
    </LinearLayout>

</LinearLayout>